Added skills and better name displays

--- a/site/index.html
+++ b/site/index.html
@@ -405,6 +405,33 @@
       </table>
     </div>
 
+    <h2>Skill Points</h2>
+    <div class="cards1">
+      <table>
+        <tr>
+          <td>Accuracy</td>
+          <td x-text="$store.d.get_stat('skill_points', 'accuracy')"></td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>Damage</td>
+          <td x-text="$store.d.get_stat('skill_points', 'damage')"></td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>Mastery</td>
+          <td x-text="$store.d.get_stat('skill_points', 'mastery')"></td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>Speed</td>
+          <td x-text="$store.d.get_stat('skill_points', 'speed')"></td>
+        </tr>
+      </table>
+    </div>
 
     <h2>Archetype: Deadeye</h2>
     <div class="cards1">
